Provided DB tests

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,6 +84,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "com.rickmortyapp.InjectionTestRunner"
     }
     signingConfigs {
         debug {
@@ -128,6 +129,20 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    //    local unit test
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation "com.google.truth:truth:1.1"
+//    instrumentation test
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.48.1'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.48.1'
+    androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.48.1'
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation "com.google.truth:truth:1.1"
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
